[gd_scene format=3 uid="uid://bkotj26uisfhp"]

[ext_resource type="Script" uid="uid://yf12wikyq7ar" path="res://scenes/ui/screens/combined_menu/dashboard_panel/sections/items/research_item_ui.gd" id="1_ita4v"]

[node name="ResearchItemUI" type="PanelContainer" unique_id=1809950337]
script = ExtResource("1_ita4v")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1012341359]
layout_mode = 2

[node name="TechTitleLabel" type="Label" parent="VBoxContainer" unique_id=199940238]
unique_name_in_owner = true
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer" unique_id=2087956499]
unique_name_in_owner = true
layout_mode = 2

[node name="TimeRemainingLabel" type="Label" parent="VBoxContainer" unique_id=157007272]
unique_name_in_owner = true
layout_mode = 2
